# JWasm

./: .gitignore  CMakeLists.txt
src/: assemble.c  codegen.c  data.c  errmsg.c  expans.c  expreval.c  extern.c  input.c  lqueue.c  macro.c  parser.c  preproc.c  proc.c  reswords.c  tokenize.c
src/H/: globals.h  msgdef.h  myassert.h  parser.h  preproc.h  token.h
